--- a/html/gallery.html
+++ b/html/gallery.html
@@ -151,12 +151,12 @@
                 <div class="wrap">
                     <button id="cubeBtn" class="round">點我</button>
                     <div class="cube">
-                        <div class="top"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></div>
+                        <div class="top"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></div>
                         <div>
-                            <span style="--i:0"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                            <span style="--i:1"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                            <span style="--i:2"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                            <span style="--i:3"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span style="--i:0"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span style="--i:1"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span style="--i:2"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                            <span style="--i:3"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
                         </div>
                     </div>
                 </div>
@@ -193,10 +193,10 @@
         <i class="closeHint fas fa-times" id="closeHint"></i>
         <div class="owl-carousel owl-theme">
             <div>
-                <img src="../assets/image/instruction_1.gif" alt="操作動畫">
+                <img src="assets/image/instruction_1.gif" alt="操作動畫">
             </div>
             <div>
-                <img src="../assets/image/instruction_2.gif" alt="操作動畫">
+                <img src="assets/image/instruction_2.gif" alt="操作動畫">
             </div>
         </div>
     </div>
