--- a/html/listing.html
+++ b/html/listing.html
@@ -168,12 +168,12 @@
                 <!-- 方塊收起按鈕 -->
                 <button id="cubeBtn" class="round">點我</button>
                 <div class="cube">
-                    <div class="top"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></div>
+                    <div class="top"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></div>
                     <div>
-                        <span class="cubeSide"style="--i:0"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                        <span class="cubeSide"style="--i:1"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                        <span class="cubeSide"style="--i:2"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
-                        <span class="cubeSide"style="--i:3"><img src="../assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                        <span class="cubeSide"style="--i:0"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                        <span class="cubeSide"style="--i:1"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                        <span class="cubeSide"style="--i:2"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
+                        <span class="cubeSide"style="--i:3"><img src="assets/image/listingImage/mona_lisa_ps.png" alt="none"></span>
                     </div>
                 </div>
                 </div>
