--- a/html/homePage.html
+++ b/html/homePage.html
@@ -46,12 +46,12 @@
         </section>
         <section class="homeCatalog">
             <div class="catalog">
-                <div class="card start">
+                <div class="cardDing start">
                     <div class="txt">
                         <h1 class="deepColor">在藝起，發現<mark class="epBColor">美</mark></h1>
                     </div>
                 </div>
-                <div class="card sculpture">
+                <div class="cardDing sculpture">
                     <div class="pic">
                         <img src="assets/image/home_homeCatalog_man.png" alt="">
                     </div>
@@ -61,7 +61,7 @@
                         <button class="round">競標</button>
                     </div>
                 </div>
-                <div class="card paint">
+                <div class="cardDing paint">
                     <div class="pic">
                         <img src="assets/image/home_homeCatalog_smilePaint.png" alt="">
                     </div>
@@ -71,7 +71,7 @@
                         <button class="round">競標</button>
                     </div>
                 </div>
-                <div class="card toy">
+                <div class="cardDing toy">
                     <div class="pic">
                         <img src="assets/image/home_homeCatalog_elmoSculpt.png" alt="">
                     </div>
@@ -81,7 +81,7 @@
                         <button class="round">競標</button>
                     </div>
                 </div>
-                <div class="card brame">
+                <div class="cardDing brame">
                     <div class="pic">
                         <img src="assets/image/home_homeCatalog_lavbag.png" alt="">
                     </div>
