listing page (html/php)

--- a/html/listing.html
+++ b/html/listing.html
@@ -193,7 +193,7 @@
                 <input type="radio" id="tab1" class="" name="mytabs" checked="checked" required>
                 <label for="tab1" class="tag">上架藝術品</label>
                 <!-- 上架競標藝術品頁面 -->
-                <form action="homePage.html" id="form1" class="content" name="page1" method="post" enctype="multipart/form-data">  <!--onclick="return false"-->
+                <form action="php/listing.php" id="form1" class="content" name="page1" method="post" enctype="multipart/form-data">  <!--onclick="return false"-->
                         <div class="artTitle">
                             <label for="">
                                 <h4>藝術品名</h4>
@@ -307,17 +307,17 @@
                                 </label>
                             </li>
                             <li>
-                                <input type="file" id="pic1" name="pic" accept=".png,.jpg">
+                                <input type="file" id="pic1" name="pic1" accept=".png,.jpg">
                                 <label for="pic1"><img id="imgAdd"src="assets/image/listingImage/add_icon.png" alt="none"></label>
                                 <!-- <label for="pic1"><img id="" :src="changeImg" alt="none"></label> -->
                             </li>
                             <li>
-                                <input type="file" id="pic2" name="pic" accept=".png,.jpg">
+                                <input type="file" id="pic2" name="pic1" accept=".png,.jpg">
                                 <label for="pic2"><img id="imgAdd1" src="assets/image/listingImage/add_icon.png" alt="none"></label>
                                 <!-- <label for="pic1"><img id="" :src="changeImg" alt="none"></label> -->
                             </li>
                             <li>
-                                <input type="file" id="pic3" name="pic" accept=".png,.jpg">
+                                <input type="file" id="pic3" name="pic1" accept=".png,.jpg">
                                 <label for="pic3"><img src="assets/image/listingImage/add_icon.png" alt="none"></label>
                                 <!-- <label for="pic1"><img id="" :src="changeImg" alt="none"></label> -->
                             </li>
