--- a/galleryAll/gallery/gallery02.html
+++ b/galleryAll/gallery/gallery02.html
@@ -38,12 +38,12 @@
             <div class="wrap">
                 <button id="cubeBtn" class="round">點我</button>     <!--方塊收起按鈕-->
                 <div class="cube">
-                    <div class="top"></div>
+                    <div class="top"><img src="../../assets/image/listingImage/mona_lisa_ps.png" alt=""></div>
                     <div>
-                        <span style="--i:0"></span>
-                        <span style="--i:1"></span>
-                        <span style="--i:2"></span>
-                        <span style="--i:3"></span>
+                        <span style="--i:0"><img src="../../assets/image/listingImage/mona_lisa_ps.png" alt=""></span>
+                        <span style="--i:1"><img src="../../assets/image/listingImage/mona_lisa_ps.png" alt=""></span>
+                        <span style="--i:2"><img src="../../assets/image/listingImage/mona_lisa_ps.png" alt=""></span>
+                        <span style="--i:3"><img src="../../assets/image/listingImage/mona_lisa_ps.png" alt=""></span>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                 <div class="card_inner">
                     <div class="card_face card_face--front">
                         <!-- <h2>Card Front</h2> -->
-                        <img src="listing_bg_picture1.png" alt="none">
+                        <img src="../../assets/image/listingImage/listing_bg_picture1.png" alt="none">
                     </div>
                     <div class="card_face card_face--back">
                         <!-- <div class="card__content">
@@ -127,6 +127,7 @@
     </section>
     <section class="lightBox displayNone" id="lightBoxPumpkin02">
         <i class="closeLightBox fas fa-times" id="closeLightBoxPumpkin02">x</i>
+        <!-- afterImage -->
         <div class="photoBox">
             <div class="container">
                 <div class="compare">
